[gd_scene load_steps=9 format=3 uid="uid://cch7d0mr8tk8k"]

[ext_resource type="Texture2D" uid="uid://c70tebe40u3no" path="res://tudo/Botoes/botao.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d0jimo2cogowt" path="res://tudo/Botoes/botaoAoClicar.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dvgepqspomoav" path="res://tudo/Botoes/BotaoClique.png" id="4"]
[ext_resource type="Script" path="res://script/NOVO_JOGO.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://jwwvg7cj0d4x" path="res://tudo/imagens/menu/comeca.jpg" id="6"]
[ext_resource type="FontFile" uid="uid://dccqymvo64o1x" path="res://tudo/fonts/BRITANIC.TTF" id="6_80sd6"]
[ext_resource type="AudioStream" uid="uid://dm8yv0o2o8jt8" path="res://tudo/sons/MusicaMenuPrincipal.mp3" id="7_qgb01"]

[sub_resource type="CanvasItemMaterial" id="2"]
blend_mode = 2

[node name="NOVO_JOGO" type="Node2D"]
script = ExtResource("5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(85, 416)
scale = Vector2(0.5, 0.52)
texture = ExtResource("6")
offset = Vector2(189.422, -184.272)

[node name="botao1" type="TextureButton" parent="."]
offset_left = 116.0
offset_top = 103.0
offset_right = 339.0
offset_bottom = 181.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("4")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_top = 17.0
offset_right = 207.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("6_80sd6")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao2" type="TextureButton" parent="."]
offset_left = 115.0
offset_top = 227.0
offset_right = 338.0
offset_bottom = 305.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("4")

[node name="Label" type="Label" parent="botao2"]
layout_mode = 0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("6_80sd6")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao3" type="TextureButton" parent="."]
offset_left = 116.0
offset_top = 442.0
offset_right = 339.0
offset_bottom = 520.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("4")

[node name="Label" type="Label" parent="botao3"]
layout_mode = 0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("6_80sd6")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="."]
material = SubResource("2")
use_parent_material = true
offset_left = 74.0
offset_top = 167.0
offset_right = 291.0
offset_bottom = 206.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qgb01")

[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
